<resources>
    <string name="app_name">Pym.do</string>
    <string name="focus_transition_name">focus_transition_reveal</string>

    <string name="main_today_focus">今日吸潘</string>
    <string name="main_today_bamboo">收获竹子</string>
    <string name="main_today_focus_time">吸潘时长</string>

    <string name="main_nickname">昵称</string>
    <string name="main_cover">封面</string>
    <string name="main_banner">守得云开</string>
    <string name="main_report">吸潘报告</string>

    <string name="main_setting">设置</string>
    <string name="main_bamboo_clock">竹子钟</string>
    <string name="main_bamboo_clock_describe">今日目标、吸潘时长、休息时长</string>
    <string name="main_personal">个性化</string>
    <string name="main_personal_describe">昵称、封面、banner</string>
    <string name="main_theme">主题</string>
    <string name="main_theme_describe">背景、音乐、蒙层</string>

    <string name="main_creator">创造者</string>
    <string name="main_station">产品 &amp; 设计 &amp; 开发</string>
    <string name="main_station_describe">\@Raindus_</string>
    <string name="main_produce">出品</string>
    <string name="main_produce_describe">\@守得云开PYM_潘粤明个站</string>

    <string name="main_thanks">鸣谢</string>
    <string name="main_res">资源来源网络</string>
    <string name="main_res_describe">\@潘粤明、王俊雄、@茉安之、@广大潘友</string>

    <string name="main_about">关于</string>
    <string name="main_version">版本</string>
    <string name="main_version_describe">0.8.0（beta）</string>

    <string name="progress_circle_view_completed">目标达成</string>
    <string name="progress_circle_view_target">目标%d分钟</string>
    <string name="progress_circle_view_fraction">%d%%</string>

    <string name="setting_focus_update">每日修改次数（%d/1）</string>
    <string name="setting_focus_target">今日目标</string>
    <string name="setting_focus_short_rest">短休息时长</string>
    <string name="setting_focus_long_rest">长休息时长</string>
    <string name="setting_focus_long_rest_interval">长休息间隔</string>
    <string name="setting_focus_light">常亮</string>
    <string name="setting_focus_music">音乐</string>

    <string name="report_today_focus_times">今日吸潘次数</string>
    <string name="report_today_bamboo_num">今日竹子收成</string>
    <string name="report_today_focus_time">今日吸潘时长(h)</string>
    <string name="report_week_focus_times">本周吸潘次数</string>
    <string name="report_week_bamboo_num">本周竹子收成</string>
    <string name="report_week_focus_time">本周吸潘时长(h)</string>
    <string name="report_all_focus_times">总吸潘次数</string>
    <string name="report_all_bamboo_num">总竹子收成</string>
    <string name="report_all_focus_time">总吸潘时长(h)</string>

    <string name="report_best_focus_day">本周最佳吸潘日</string>
    <string name="report_best_focus_time">本周最佳吸潘时段</string>
    <string name="report_best_non_data">暂无数据</string>
    <string name="report_best_focus_day_over">比平均值高出%d%%</string>
    <string name="report_best_focus_period">%d:00-%d:00</string>
    <string name="report_lately_focus_times">最近吸潘次数</string>
    <string name="report_lately_bamboo_num">最近竹子收成</string>
    <string name="report_lately_focus_time">最近吸潘时长(h)</string>
    <string name="report_day">天</string>
    <string name="report_week">周</string>
    <string name="report_month">月</string>

    <string name="loading_text">努力加载中...</string>

    <string name="permission_personal">拒绝后无法体验个性化</string>
    <string name="permission_theme">拒绝后无法设置主题</string>
    <string name="permission_default">拒绝后无法选择图片</string>
</resources>
